--- a/vignettes/normEpi.Rmd
+++ b/vignettes/normEpi.Rmd
@@ -5,7 +5,7 @@ author:
   affiliation: Walter and Eliza Hall Institute of Medical Research
   email: yuchen@wehi.edu.au
 output:
-  BiocStyle::html_document:
+  rmarkdown::html_document:
     toc: true
     toc_float: true
 bibliography: ref.bib
@@ -38,22 +38,16 @@ It contains gene expression profiles of over 3000 adult total epithelial cells.
 ## Pre-processing the raw data
 
 The raw 10X data come in BCL format.
-They need to be pre-processed by software tools such as `r Rpackage("cellranger")`.
+They need to be pre-processed by software tools such as `cellranger`.
 
-For this particular data, we used `r Rpackage("cellranger")` to convert BCL files to the FASTQ format, align the reads to the mouse genome and quantify the UMI counts for each gene in each cell.
-The entire analysis in this workflow is conducted within the R environment using the outputs from `r Rpackage("cellranger")`.
-We do not cover the details of running `r Rpackage("cellranger")` as they are beyond the scope of this workflow.
-The information of how to run `r Rpackage("cellranger")` is available at 
+For this particular data, we used `cellranger` to convert BCL files to the FASTQ format, align the reads to the mouse genome and quantify the UMI counts for each gene in each cell.
+The entire analysis in this workflow is conducted within the R environment using the outputs from `cellranger`.
+We do not cover the details of running `cellranger` as they are beyond the scope of this workflow.
+The information of how to run `cellranger` is available at 
 \url{https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/what-is-cell-ranger}.
 
 ## Downloading the read counts
 
-The `r Rpackage("cellranger")` outputs of this data are publicly available at \url{https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSM2510617}.
-It contains three data files: a sparse matrix object \code{GSM2510617\_P7-matrix.mtx.gz}, cell barcodes \code{GSM2510617\_P7-barcodes.tsv.gz} and the gene annotation \code{GSM2510617\_P7-genes.tsv.gz}.
-
-Here we create a subfolder named _Data_ under the current working directory.
-We download the three files, unzip them and store them in the _Data_ directory.
-The names of three data files after the unzip are \code{P7-matrix.mtx}, \code{P7-barcodes.tsv} and \code{P7-genes.tsv}, respectively.
 
 ```{r GlobalOptions, echo=FALSE, include=FALSE, cache=FALSE}
 #knitr::opts_chunk$set(fig.width=7, fig.height=7, out.width="3.8in", fig.path='figure/', fig.align='center')
@@ -88,8 +82,8 @@ for(i in 1:length(Samples)){
 
 ## Read in the data
 
-We load the `r CRANpkg("Seurt")` package and read in the 10X data for Patient N1469.
-The object \code{N1469.data} is a sparse matrix containing the raw count data of Patient N1469.
+We load the Seurt package and read in the 10X data for Patient N1469.
+The object `N1469.data` is a sparse matrix containing the raw count data of Patient N1469.
 Rows are features (genes) and columns are cells.
 By default, the column names of the data are the cell barcodes.
 To distinguish cells from different patients in the later analysis, the patient ID is added as a prefix to the column names.
@@ -101,7 +95,7 @@ N1469.data <- Read10X(data.dir = "Data/N1469")
 colnames(N1469.data) <- paste("N1469", colnames(N1469.data), sep="_")
 ```
 
-We then create a Seurat object \code{N1469}.
+We then create a Seurat object `N1469`.
 Genes expressed in less than 3 cells are removed.
 Cells with at least 200 detected genes are kept in the analysis.
 ```{r SeuratObject, cache=TRUE}
@@ -114,7 +108,7 @@ Quality control is essential for scRNA-seq analysis.
 Cells of low quality and genes of low expression shall be removed prior to the analysis.
 
 Two common measures of cell quality are the library size and the number of expressed genes in each cell.
-The number of unique genes and total molecules (library size) are automatically calculated during \code{CreateSeuratObject()}.
+The number of unique genes and total molecules (library size) are automatically calculated during `CreateSeuratObject()`.
 Another measure to look at is the proportion of reads from mitochondrial genes in each cell.
 Cells with higher mitochondrial content are more prone to die, and hence should also be from the analysis.
 Here, we calculate the percentages of reads from mitochondrial genes and store them in the metadata of the Seurat object.
