--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -1,3 +1,14 @@
+@article{stuart2019comprehensive,
+  title={Comprehensive integration of single-cell data},
+  author={Stuart, Tim and Butler, Andrew and Hoffman, Paul and Hafemeister, Christoph and Papalexi, Efthymia and Mauck III, William M and Hao, Yuhan and Stoeckius, Marlon and Smibert, Peter and Satija, Rahul},
+  journal={Cell},
+  volume={177},
+  number={7},
+  pages={1888--1902},
+  year={2019},
+  publisher={Elsevier}
+}
+
 @ARTICLE{pal2021scrnaseqatlas,
   title = {A single cell {RNA} atlas of human breast spanning normal, preneoplastic and tumorigenic states},
   author = {Bhupinder Pal and Yunshun Chen and François Vaillant and Bianca D. Capaldo and Rachel Joyce and Xiaoyu Song and Vanessa Bryant and Jocelyn S. Penington and Leon Di-Stefano and Nina Tubau Ribera and Stephen Wilcox and G. Bruce Mann and kConFab and Anthony T. Papenfuss and Geoffrey J. Lindeman and Gordon K. Smyth and Jane E. Visvader},
