--- a/vignettes/SingleCellWorkshop.Rmd
+++ b/vignettes/SingleCellWorkshop.Rmd
@@ -2,12 +2,14 @@
 title: "Integration analysis of multi-sample single cell RNA-seq experiment"
 author:
 - name: Yunshun Chen
-  affiliation: Walter and Eliza Hall Institute of Medical Research
+  affiliation: Walter and Eliza Hall Institute of Medical Research, 1G Royal Parade, Parkville, VIC 3052, Melbourne, Australia
   email: yuchen@wehi.edu.au
+date: Aug 11, 2021
 output:
   BiocStyle::html_document:
     toc: true
     toc_float: true
+    fig_caption: true
 bibliography: ref.bib
 vignette: >
   %\VignetteIndexEntry{Integration analysis of multi-sample single cell RNA-seq experiment}
@@ -22,42 +24,41 @@ abstract: |
 
 Single-cell RNA sequencing (scRNA-seq) has become a widely used technique that allows researchers to profile the gene expression and study molecular biology at the cellular level. 
 It provides biological resolution that cannot be achieved with conventional bulk RNA-seq experiments on cell populations. 
-Of all the existing platforms the 10X Genomics Chromium system has become the most popular and commonly used one. 
-Each run of 10X generates millions of UMI counts across thousands of cells. 
 
-Here, we provide a detailed workflow for analyzing a 10X Chromium single-cell RNA-seq data [@pal2021scrnaseqatlas].
-The 10X data we use here is from a study of mouse epithelial mammary gland [@pal2017construction].
-It contains gene expression profiles of over 3000 adult total epithelial cells.
+Here, we provide a detailed workflow for analyzing the 10X single cell RNA-seq data from a single cell RNA expression atlas of human breast tissue [@pal2021scrnaseqatlas].
+This cell atlas explores the cellular heterogeneity of human mammary gland across different states including normal, pre-neoplastic and cancerous states.
 
-Test Test Test Test Test Test Test Test
-Test Test Test Test Test Test Test Test
-Test Test Test Test Test Test Test Test
+We will be using part of this cell atlas data to demonstrate how to perform a standard analysis for examining one single cell sample, an integration analysis for exploring the cellular heterogeneity across multiple samples, and how to perform differential expression analysis using pseudo-bulk approach.
+Most of the analysis will be performed using the _Seurat_ package.
 
-
-# 10X human breast tissue dataset
-
-## Overview of the single cell experiments
-
+# Preliminary
 
 ## Pre-processing the raw data
 
 The raw 10X data come in BCL format.
-They need to be pre-processed by software tools such as `cellranger`.
+They need to be pre-processed by software tools such as _cellranger_.
 
-For this particular data, we used `cellranger` to convert BCL files to the FASTQ format, align the reads to the mouse genome and quantify the UMI counts for each gene in each cell.
-The entire analysis in this workflow is conducted within the R environment using the outputs from `cellranger`.
+We use _cellranger_ to convert BCL files into the FASTQ files, then align the reads to the human genome, and finally quantify the UMI counts for each gene in each cell.
+The entire analysis in this workflow is conducted within the R environment using the outputs from _cellranger_.
 We do not cover the details of running `cellranger` as they are beyond the scope of this workflow.
 The information of how to run `cellranger` is available at 
 \url{https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/what-is-cell-ranger}.
 
+```{r GlobalOptions, echo=FALSE, include=FALSE, cache=FALSE}
+knitr::opts_chunk$set(fig.width=6, fig.height=5.5, fig.align='center')
+#knitr::opts_chunk$set(error=FALSE, prompt=TRUE, comment=NA)
+knitr::opts_chunk$set(message=FALSE, warning=FALSE, echo=TRUE)
+#knitr::opts_chunk$set(cache=TRUE, cache.lazy=FALSE)
+```
+
 ## Downloading the read counts
 
+In this workshop, we will be using five samples from this published study.
+These five samples correspond to five individual patients with the following Ids: _N1469_, _N0280_, _N1105_, _N0230_ and _N0123_.
+The accession numbers of the five samples are GSM4909258, GSM4909255, GSM4909260, GSM4909264 and GSM4909267, respectively.
 
-```{r GlobalOptions, echo=FALSE, include=FALSE, cache=FALSE}
-#knitr::opts_chunk$set(fig.width=7, fig.height=7, out.width="3.8in", fig.path='figure/', fig.align='center')
-#knitr::opts_chunk$set(error=FALSE, prompt=TRUE, comment=NA)
-knitr::opts_chunk$set(cache=TRUE, cache.lazy=FALSE, message=FALSE, warning=FALSE, echo=TRUE)
-```
+We first create a `Data` folder under the current working directory.
+Then we make five subfolders with the patient Ids as the folder names under the `Data` folder.
 ```{r Samples}
 Samples <- c("N1469", "N0280", "N1105", "N0230", "N0123")
 for(i in 1:length(Samples)){
@@ -65,6 +66,9 @@ for(i in 1:length(Samples)){
     if (!dir.exists(out_dir)) dir.create(out_dir, recursive = TRUE)
 }
 ```
+
+The cellranger output of each sample consists of three data files: a count matrix in _mtx.gz_ format, barcode information in _tsv.gz_ format, and feature information in _tsv.gz_.
+We download the three data files from GEO for each of the five samples and store them in each of the subfolders accordingly.
 ```{r Download, eval=TRUE}
 GSM <- "https://ftp.ncbi.nlm.nih.gov/geo/samples/GSM4909nnn/"
 url.matrix <- paste0(GSM, 
@@ -90,7 +94,7 @@ We load the Seurt package and read in the 10X data for Patient N1469.
 The object `N1469.data` is a sparse matrix containing the raw count data of Patient N1469.
 Rows are features (genes) and columns are cells.
 By default, the column names of the data are the cell barcodes.
-To distinguish cells from different patients in the later analysis, the patient ID is added as a prefix to the column names.
+To distinguish cells from different patients in the later analysis, the patient Id is added as a prefix to the column names.
 ```{r loadSeurat, message=FALSE}
 library(Seurat)
 ```
@@ -102,7 +106,7 @@ colnames(N1469.data) <- paste("N1469", colnames(N1469.data), sep="_")
 We then create a Seurat object `N1469`.
 Genes expressed in less than 3 cells are removed.
 Cells with at least 200 detected genes are kept in the analysis.
-```{r SeuratObject, cache=TRUE}
+```{r SeuratObject}
 N1469 <- CreateSeuratObject(counts=N1469.data, project="N1469", min.cells=3, min.features=200)
 ```
 
@@ -127,7 +131,7 @@ head(N1469@meta.data)
 ```
 
 Scatter plots can be produced for visualizing some of the QC metrics.
-```{r QC_Scatter_plot, fig.cap="Scatter plots of QC metrics.", fig.wide=TRUE, fig.asp=0.4}
+```{r QC_Scatter_plot, fig.cap="Scatter plots of QC metrics.", fig.height=4.5, fig.width=9}
 plot1 <- FeatureScatter(N1469, feature1 = "nCount_RNA", feature2 = "percent.mt")
 plot2 <- FeatureScatter(N1469, feature1 = "nCount_RNA", feature2 = "nFeature_RNA")
 plot1 + plot2
@@ -161,7 +165,7 @@ N1469 <- FindVariableFeatures(N1469, selection.method="vst", nfeatures=1500)
 ```
 
 A mean-variance plot can be produced for visualizing the top variable genes.
-```{r HVG_plot, fig.cap="A mean-variance plot where top 1500 HVGs are highlighted in red and top 50 HVGs are labelled.", fig.asp=0.8}
+```{r HVG_plot, fig.cap="A mean-variance plot where top 1500 HVGs are highlighted in red and top 50 HVGs are labelled.", fig.height=5.5, fig.width=7}
 top50 <- head(VariableFeatures(N1469), 50)
 plot1 <- VariableFeaturePlot(N1469)
 plot2 <- LabelPoints(plot=plot1, points=top50, repel=TRUE)
@@ -187,7 +191,7 @@ The top PCs would capture the dominant factors of heterogeneity in the data set.
 Here, we perform PCA on the scaled data. 
 By default, only the previously determined 1500 HVGs are used and the first 50 PCs are computed and returned.
 The PCA results can be visualized in a PCA plot.
-```{r PCA, fig.cap="PCA plot showing the first two principal components of the data."}
+```{r PCA, fig.cap="PCA plot showing the first two principal components of the data.", fig.height=6, fig.width=7}
 N1469 <- RunPCA(N1469, features=VariableFeatures(N1469))
 DimPlot(N1469, reduction = "pca")
 ```
@@ -208,7 +212,7 @@ dimUsed <- 30
 N1469 <- RunUMAP(N1469, dims=1:dimUsed, seed.use=2021, verbose=FALSE)
 N1469 <- RunTSNE(N1469, dims=1:dimUsed, seed.use=2021)
 ```
-```{r DR_plot, fig.cap="UMAP and t-SNE visualization", fig.wide=TRUE, fig.asp=0.4}
+```{r DR_plot, fig.cap="UMAP and t-SNE visualization", fig.height=4, fig.width=9}
 plot1 <- DimPlot(N1469, reduction = "umap")
 plot2 <- DimPlot(N1469, reduction = "tsne")
 plot1 + plot2
@@ -238,7 +242,7 @@ table(Idents(N1469))
 ```
 
 We can visualize the cell clusters in a UMAP plot.
-```{r UMAP, fig.cap="UMAP visualization where cells are coloured by cell cluster.", fig.asp=0.85}
+```{r UMAP, fig.cap="UMAP visualization where cells are coloured by cell cluster.", fig.height=6.5, fig.width=7.5}
 DimPlot(N1469, reduction = "umap", label = TRUE)
 ```
 
@@ -281,12 +285,12 @@ top3
 ```
 
 The expression level of the top marker genes can be overlaid on the UMAP plots for visualization.
-```{r FeaturePlotMarkers, fig.cap="Top marker expression visualizations on a UMAP plot.", fig.wide=TRUE, fig.asp=1.4}
+```{r FeaturePlotMarkers, fig.cap="Top marker expression visualizations on a UMAP plot.", fig.height=12.5, fig.width=9}
 FeaturePlot(N1469, features = top3$gene, ncol=3)
 ```
 
 A dot plot can also be produced for visualizing the top marker genes.
-```{r DotPlotMarkers, fig.cap="A dot plot of top marker genes of each cluster.", fig.asp=0.5}
+```{r DotPlotMarkers, fig.cap="A dot plot of top marker genes of each cluster.", fig.height=4, fig.width=8}
 DotPlot(N1469, features = top3$gene, dot.scale = 8) + RotatedAxis()
 ```
 
@@ -331,10 +335,10 @@ SigScores <- do.call("cbind", SigScore)
 colnames(SigScores) <- c("Basal", "LP", "ML", "Stroma")
 N1469@meta.data <- cbind(N1469@meta.data, SigScores)
 ```
-```{r SigScorePlot, fig.cap="Signature scores.", fig.wide=TRUE, fig.asp=0.8}
+```{r SigScorePlot, fig.cap="Signature scores.", fig.height=7, fig.width=8.5}
 FeaturePlot(N1469, features = colnames(SigScores))
 ```
-```{r SigScoreViolinPlot, fig.cap="Violin plots of signature scores.", fig.wide=TRUE, fig.asp=0.7}
+```{r SigScoreViolinPlot, fig.cap="Violin plots of signature scores.", fig.height=6.5, fig.width=9}
 VlnPlot(N1469, features = colnames(SigScores), ncol=2, pt.size=0.1)
 ```
 It can be seen that cells in cluster 2 have high expression levels of basal signature genes, suggesting these cells are likely to be basal cells.
@@ -348,7 +352,7 @@ We produce a ternary plot to see which of the three populations the cells are cl
 To measure the similarity between each cell and three populations, we count the numbers of expressed signatures (with at least 1 count) in each cell.
 The position of each cell on the ternary plot is determined by the numbers of expressed gene signatures of the three populations in that cell.
 
-```{r TernaryPlot, fig.cap="Violin plots of signature scores.", fig.small=TRUE, fig.asp=1}
+```{r TernaryPlot, fig.cap="Violin plots of signature scores.", fig.height=5.5, fig.width=5.5}
 TN <- matrix(0L, ncol(N1469), 3L)
 colnames(TN) <- c("LP", "ML", "Basal")
 for(i in colnames(TN)){
@@ -446,7 +450,7 @@ NormEpi <- RunUMAP(NormEpi, dims=1:dimUsed, seed.use=2021)
 ```
 
 The UMAP visualization of the integrated data is shown below.
-```{r UMAP_Sample, fig.cap="UMAP visualization of the integrated data where cells are coloured by patient."}
+```{r UMAP_Sample, fig.cap="UMAP visualization of the integrated data where cells are coloured by patient.", fig.height=7, fig.width=8}
 DimPlot(NormEpi, reduction = "umap", group.by="orig.ident")
 ```
 From the UMAP it can be seen that cells are not clustered by sample, indicating the batch effects between different samples have been removed.
@@ -462,7 +466,7 @@ table(Idents(NormEpi))
 ```
 
 The clustering results are shown in the UMAP plot below.
-```{r UMAP_Cluster, fig.cap="UMAP visualization of the integrated data where cells are coloured by cluster."}
+```{r UMAP_Cluster, fig.cap="UMAP visualization of the integrated data where cells are coloured by cluster.", fig.height=7, fig.width=8}
 DimPlot(NormEpi, reduction = "umap", label=TRUE)
 ```
 
@@ -487,17 +491,17 @@ NormEpi@meta.data <- cbind(NormEpi@meta.data, SigScores2)
 ```
 
 We then produce feature plots and violin plots to visualize the signature scores.
-```{r SigScorePlot2, fig.cap="Signature scores for the integrated data.", fig.wide=TRUE, fig.asp=0.8}
+```{r SigScorePlot2, fig.cap="Signature scores for the integrated data.", fig.height=7, fig.width=8.5}
 FeaturePlot(NormEpi, features = colnames(SigScores2))
 ```
-```{r SigScoreViolinPlot2, fig.cap="Violin plots of signature scores.", fig.wide=TRUE, fig.asp=0.7}
+```{r SigScoreViolinPlot2, fig.cap="Violin plots of signature scores.", fig.height=6.5, fig.width=9}
 VlnPlot(NormEpi, features = colnames(SigScores2), ncol=2, pt.size=0.1)
 ```
 It can be seen that cells in cluster 2 have high expression levels of basal signature genes, suggesting these cells are likely to be basal cells.
 Likewise, cluster 0 and 5 are LP or LP-like, cluster 1 and 4 are ML or ML-like, and cluster 3 is stroma. 
 
 A ternary plot can also be generated in the same way to examine the correlation between the cells and the three major epithelial populations.
-```{r TernaryPlot2, fig.cap="Violin plots of signature scores for the integrated data.", fig.small=TRUE, fig.asp=1}
+```{r TernaryPlot2, fig.cap="Violin plots of signature scores for the integrated data.", fig.height=6, fig.width=6}
 TN2 <- matrix(0L, ncol(NormEpi), 3L)
 colnames(TN2) <- c("LP", "ML", "Basal")
 for(i in colnames(TN2)){
@@ -516,7 +520,7 @@ NormEpi.markers <- FindAllMarkers(NormEpi, only.pos = TRUE)
 ```
 
 The top 3 marker genes for each of cluster are listed below.
-```{r TopMarkersAll, cache=TRUE, message=FALSE}
+```{r TopMarkersAll}
 topMarkers.all <- split(NormEpi.markers, NormEpi.markers$cluster)
 top3.all <- lapply(topMarkers.all, head, n=3)
 top3.all <- do.call("rbind", top3.all)
@@ -524,7 +528,7 @@ top3.all
 ```
 
 We highlight the expression levels of these markers genes in the UMAP plots for visualization.
-```{r FeaturePlotMarkersAll, fig.cap="Top marker expression visualizations on a UMAP plot.", fig.wide=TRUE, fig.asp=1.4}
+```{r FeaturePlotMarkersAll, fig.cap="Top marker expression visualizations on a UMAP plot.", fig.height=12.5, fig.width=9}
 FeaturePlot(NormEpi, features = top3.all$gene, ncol=3)
 ```
 
@@ -533,10 +537,18 @@ FeaturePlot(NormEpi, features = top3.all$gene, ncol=3)
 
 ## Biological variation
 
+In RNA-seq experiments with replicate samples, biological variation represents the variation of the underlying gene abundances between the replicates.
+Accounting for biological variation is crucial in RNA-seq DE analysis.
+Many statistically rigorous methods and software packages have been developed for estimating biological variation and incorporating it into the DE analysis (e.g., edgeR, limma, DESeq2 etc.).
 
+For single cell RNA-seq experiments with biological replicates, one should also take into account the biological variation between different replicate samples where cells are obtained.
+However, applying bulk RNA-seq DE methods directly to single cell RNA-seq data is not appropriate as each cell is not independent biological replicate.
+One of the commonly used methods to account for biological variation between replicates is the "pseudo-bulk" approach, where read counts from all cells with the same combination of label (e.g., cluster) and sample are summed together.
 
 ## Creating pseudo-bulk samples
 
+We first extract the cluster and sample information from the integrated Seurat object and combine them together.
+The numbers of cells under different combinations of cell cluster and sample are shown below.
 ```{r SampClustID}
 sampID <- NormEpi@meta.data$orig.ident
 clustID <- Idents(NormEpi)
@@ -544,11 +556,13 @@ sampClust <- paste(sampID, clustID, sep="_Clst")
 table(sampClust)
 ```
 
+We then form pseudo-bulk samples by aggregating the read counts for each gene by cluster-sample combination.
 ```{r Aggregate}
 rawCounts <- as.matrix(NormEpi@assays$RNA@counts)
 counts <- t(rowsum(t(rawCounts), group=sampClust))
 ```
 
+We create a `DGEList` object using the pseudo-bulk samples and proceed to the edgeR DE analysis pipeline.
 ```{r edgeR}
 library(edgeR)
 y <- DGEList(counts)
@@ -557,12 +571,16 @@ y$samples$Patient <- factor(gsub("_.*$", "", colnames(y)), level=Samples)
 ```
 
 ## Filtering
+
+The library size (total number of reads) of each pseudo-bulk sample highly depends on the number of cells in that sample.
+We remove the samples with library size less than 50,000.
 ```{r edgeR_Filtering}
 keep.sample <- y$samples$lib.size > 5e4
 table(keep.sample)
 y <- y[,keep.sample]
 ```
 
+The gene filtering is performed by the `filterByExpr` function in edgeR.
 ```{r edgeR_Filtering2}
 keep.gene <- filterByExpr(y)
 table(keep.gene)
@@ -571,6 +589,8 @@ y <- y[keep.gene,,keep=FALSE]
 
 ## Normalization
 
+We perform TMM normalization to adjust for the compositional biases between the samples.
+The normalization factors are listed below.
 ```{r TMM}
 y <- calcNormFactors(y)
 y$samples
@@ -578,16 +598,20 @@ y$samples
 
 ## Data exploration
 
-```{r MDS, fig.cap="MDS plots of the pseudo-bulk samples.", fig.wide=TRUE, fig.asp=0.5}
+We produce an MDS plot to visualize the relationship between all the pseudo-bulk samples.
+```{r MDS, fig.cap="MDS plots of the pseudo-bulk samples.", fig.height=4.5, fig.width=9}
 Cluster <- factor(y$samples$group)
 Patient <- y$samples$Patient
 par(mfrow=c(1,2))
-plotMDS(y, pch=16, col=col.p[Cluster])
+plotMDS(y, pch=16, col=col.p[Cluster], main="By cluster")
 legend("bottomleft", legend=paste("Cluster", levels(Cluster)), pch=16, col=col.p)
-plotMDS(y, pch=16, col=Patient)
+plotMDS(y, pch=16, col=Patient, main="By sample")
 legend("bottomleft", legend=levels(Patient), pch=16, col=1:5)
 ```
+From the MDS plot it can be seen that the pseudo-bulk samples are grouped by cluster defined at the single cell level.
+We also notice that samples from cluster 0 and 5 have similar expression pattern, whereas samples from cluster 1 and 4 are close to each other.
 
+We use the cluster and sample information to create a design matrix as follows.
 ```{r design}
 design <- model.matrix(~ 0 + Cluster + Patient)
 colnames(design)
@@ -595,12 +619,14 @@ colnames(design)
 
 ## Dispersion estimation
 
+We estimate negative binomial dispersions and quasi-likelihood dispersions as follows.
 ```{r dispersion}
 y <- estimateDisp(y, design)
 fit <- glmQLFit(y, design)
 ```
 
-```{r plotDisp, fig.cap="BCV and quasi-likelihood dispersion plots.", fig.wide=TRUE, fig.asp=0.5}
+The dispersions can be examined in the following plots.
+```{r plotDisp, fig.cap="BCV and quasi-likelihood dispersion plots.", fig.height=4.5, fig.width=9}
 par(mfrow=c(1,2))
 plotBCV(y)
 plotQLDisp(fit)
@@ -608,6 +634,9 @@ plotQLDisp(fit)
 
 ## Differential expression
 
+For the differential expression analysis, we are particularly interested in the genes that are up-regulated in each cluster compared with all the other clusters.
+Therefore, we create a contrast matrix as follows.
+Each column of the matrix represents a testing constrast that compares one cluster with the average of all the other clusters.
 ```{r contrast}
 ncls <- nlevels(Idents(NormEpi))
 contr <- rbind( matrix(1/(1-ncls), ncls, ncls),
@@ -615,13 +644,20 @@ contr <- rbind( matrix(1/(1-ncls), ncls, ncls),
 diag(contr) <- 1
 rownames(contr) <- colnames(design)
 colnames(contr) <- paste0("Cluster", levels(Idents(NormEpi)))
+contr
 ```
 
+We then perform quasi-likelihood F-test under each contrast.
+In order to focus on genes with strong DE signal, we test for the differences above a fold-change threshold of 1.3.
+This is done by calling the `glmTreat` function in edgeR.
+The results of all the tests are stored as a list of `DGELRT` objects.
 ```{r DETest}
 test <- list()
 for(i in 1:ncls) test[[i]] <- glmTreat(fit, contrast=contr[,i], lfc=log2(1.3))
+names(test) <- colnames(contr)
 ```
 
+The number of DE genes under each comparison can be viewed by the `decideTestsDGE` function.
 ```{r decideTest}
 dtest <- lapply(lapply(test, decideTestsDGE), summary)
 dtest <- do.call("cbind", dtest)
@@ -629,6 +665,13 @@ colnames(dtest) <- colnames(contr)
 dtest
 ```
 
+We can view the top DE results using the `topTags` function.
+For example, to see the top 20 DE genes of cluster 2 vs all the other clusters, we use the following line.
+```{r topTags_cluster2}
+topTags(test$Cluster2, n=20L)
+```
+
+We can extract the top 15 marker genes (up-regulated only) of each cluster as follows.
 ```{r topMarkersPB}
 top <- 15
 pseudoMakers <- list()
@@ -641,8 +684,10 @@ Markers <- unlist(pseudoMakers)
 Markers <- Markers[!duplicated(Markers)]
 ```
 
-
-```{r HeatmapPB, fig.cap="Heat map of the top marker genes.", fig.asp=1.5}
+Then we create a heatmap using `pheatmap` for those top marker genes.
+The standardized log-CPM values of the marker genes are used for the expression levels on the heatmap.
+Genes and samples on the heatmap are reordered by the Ward method of hierarchical clustering, which correctly groups samples by cell cluster.
+```{r HeatmapPB, fig.cap="Heat map of the top marker genes.", fig.height=11, fig.width=7.5}
 library(pheatmap)
 lcpm <- cpm(y, log=TRUE)
 expr <- t(scale(t(lcpm[Markers, ])))
